Attempting to fix overflow issue on iphone xsmax safari browser

--- a/src/index.css
+++ b/src/index.css
@@ -254,4 +254,7 @@ li{
   p{
     font-size: 12px;
   }
+  body{
+    overflow-y:hidden;
+  }
 }
